<resources>
    <string name="app_name">Checkpot</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="to_enter">Войти</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="to_complain">Пожаловаться</string>
    <string name="to_select">Выбрать</string>
    <string name="submiting">Данные отправляются</string>
    <string name="submit_ok">Данные успешно отправлены</string>
    <string name="submit_ok_mail">Письмо отправлено</string>
    <string name="error_submit">Ошибка отправки данных.\nПопробуйте позже.</string>
    <string name="error_auth">Не удалось авторизоваться.</string>
    <string name="error">Произошла ошибка</string>
    <string name="error_prices">Ошибка соединения. Попробуйте создать розыгрыш еще раз.</string>
    <string name="check_connection">Проверьте подключение к интернету</string>
    <string name="need_all_valid">Все поля должны быть корректно заполнены</string>
    <string name="load_image">Загрузить изображение</string>
    <string name="perfect">Отлично!</string>
    <string name="hours">Часы</string>
    <string name="mins">Минуты</string>
    <string name="secs">Секунды</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="finished">Окончен</string>
    <string name="result">Результаты</string>
    <string name="draft">Черновик</string>
    <string name="edit">Редактировать</string>
    <string name="for_business">Для бизнеса</string>
    <string name="no_memory">На устройстве недостаточно памяти</string>
    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string name="tutorial_title1">Находите\nлюбимые места</string>
    <string name="tutorial_title2">Участвуйте\nв розыгрышах</string>
    <string name="tutorial_title3">Побеждайте\nи получайте призы</string>
    <string name="tutorial_skip">Пропустить</string>
    <string name="tutorial_next">Продолжить</string>
    <string name="tutorial_finish">Завершить</string>
    <string name="tutorial_begin">Начать</string>
    <string name="register_title">Добро пожаловать\nв Checkpot</string>
    <string name="register_btn_register">Регистрация</string>
    <string name="register_btn_skip">Перейти к розыгрышам</string>
    <string name="register1_desc">Если у вас возникли проблемы со входом, обратитесь в нашу техподдержку</string>
    <string name="register1_title_phone">Ваш номер телефона</string>
    <string name="register1_hint_phone">1234567890</string>
    <string name="register1_btn_sendsms">Отправить смс с кодом</string>
    <string name="register1_txt_cant_enter">Не можете войти?</string>
    <string name="register1_nonumber">Необходимо ввести номер</string>
    <string name="register1_timer_hint">Доступно через</string>
    <string name="register1_send_error">Не удалось отправить номер</string>
    <string name="register1_send_often">Пожалуйста отправьте позже</string>
    <string name="register2_title_code">Код из смс</string>
    <string name="register2_txt_nosms">Не приходит смс?</string>
    <string name="register2_txt_wait">Подождите\nВыполняется вход</string>
    <string name="register2_nocode">Необходимо ввести код</string>
    <string name="register2_send_error">Не удалось отправить код</string>
    <string name="register2_wrong_code">Не верный код. Попробуйте еще раз.</string>
    <string name="register_cant_title">Не можете войти?</string>
    <string name="register_cant_desc">Если у вас возникли проблемы со входом, обратитесь в нашу техподдержку</string>
    <string name="register_cant_phone">8 (800) 555–35–35</string>
    <string name="register_cant_phone_intent">88005553535</string>
    <string name="register_cant_phone_permission">Необходимо разрешить звонки</string>
    <string name="register_write_permission_error">Необходимо разрешить запись файлов</string>
    <string name="register_cant_mail"><u>game@checkpot.fun</u></string>
    <string name="register_cant_mail_owner"><u>support@checkpot.fun</u></string>
    <string name="register_cant_mail_subj">Обратная связь</string>
    <string name="register_cant_telegram"><u>t.me/checkpot_game</u></string>
    <string name="register_cant_telegram_url">https://t.me/checkpot_game</string>
    <string name="register_cant_telegram_owner"><u>t.me/checkpot_support</u></string>
    <string name="register_cant_telegram_owner_url">https://t.me/checkpot_support</string>
    <string name="register_cant_facebook"><u>fb.com/checkpotapp</u></string>
    <string name="register_cant_facebook_url">https://www.facebook.com/checkpotapp</string>
    <string name="register_cant_vkontakte"><u>vk.com/checkpot</u></string>
    <string name="register_cant_vkontakte_url">https://vk.com/checkpot</string>
    <string name="register_cant_btn">Выполнить вход</string>
    <string name="contacts_title">Контактная\nинформация</string>
    <string name="contacts_desc">Если у вас возникли вопросы или вы заметили ошибку, пожалуйста, сообщите нам.</string>
    <string name="contacts_btn_player">Для бизнеса</string>
    <string name="contacts_btn_deleg">Экстренная помощь</string>
    <string name="contacts_help_title">Экстренная\nпомощь</string>
    <string name="contacts_help_desc">Мы свяжемся с вами по телефону и поможем решить все вопросы</string>
    <string name="contacts_help_btn">Свяжитесь со мной</string>
    <string name="profile_title">Профиль\nпользователя</string>
    <string name="profile_photo">Фото профиля</string>
    <string name="profile_id">Ваш Id</string>
    <string name="profile_name">Ваше имя и фамилия</string>
    <string name="profile_date">Дата рождения</string>
    <string name="profile_sex">Пол</string>
    <string name="profile_sex_m">Мужской</string>
    <string name="profile_sex_f">Женский</string>
    <string name="profile_btn">Сохранить изменения</string>
    <string name="profile_agree">Настоящим выражаю, что я старше 18 лет и ознакомлен и согласен с <a href="https://s.checkpot.fun/agreement.html">политикой конфиденциальности</a>.</string>
    <string name="profile_toast_agree">Необходимо подтвердить свое согласие</string>
    <string name="raffles_title">Мои розыгрыши</string>
    <string name="raffles_btn_current">Текущий</string>
    <string name="raffles_btn_win">Победа</string>
    <string name="raffles_btn_past">Прошли</string>
    <string name="raffles_btn_retry">Повторить</string>
    <string name="raffles_btn_maquette">Макет</string>
    <string name="raffles_btn_active">Активные</string>
    <string name="raffles_fail">Не удалось обновить розыгрыши</string>
    <string name="raffles_pick_title">Где и как получить приз?</string>
    <string name="raffles_pick_address">Вам необходимо прийти по адресу: </string>
    <string name="raffles_pick_check">Покажите этот экран сотруднику компании</string>
    <string name="raffles_pick_idr">id розыгрыша</string>
    <string name="raffles_pick_idu">id пользователя</string>
    <string name="raffles_pick_min">Минимальная сумма чека</string>
    <string name="raffles_pick_joy">Наслаждаться выигрышем</string>
    <string name="raffles_card_btn_pick">Забрать приз</string>
    <string name="raffles_card_btn_not_picked">Вы не забрали приз</string>
    <string name="raffles_card_min_receipt">от %d руб</string>
    <string name="details_prizes">Призов</string>
    <string name="details_success_title">Ваших чеков</string>
    <string name="details_mem_max">Мест</string>
    <string name="details_days">Дней</string>
    <string name="details_mem_cur">Участвует</string>
    <string name="details_btn_part">Участвовать в розыгрыше</string>
    <string name="details_already">Вы уже участвуете в розыгрыше</string>
    <string name="details_success">Добавить чек</string>
    <string name="details_checking">Ваш чек находится на проверке</string>
    <string name="details_incorrect">Ваш чек некорректен. Попробуйте еще раз</string>
    <string name="details_again">Попробовать еще раз</string>
    <string name="details_sum">Сумма вашего чека не соответствует условиям розыгрыша!</string>
    <string name="details_desc_test">Если ты не любишь мясо-гриль, у тебя мало шансов полюбить Bukowski. У Bukowski много мяса. Ешь мясо с удовольствием</string>
    <string name="details_check">Чек:</string>
    <string name="details_guaranteed">Гарантированный приз</string>
    <string name="details_guaranteed_desc_test">Экскурсия на закрытый мастер класс в гриль бар</string>
    <string name="details_more">Еще розыгрыши</string>
    <string name="details_menu_details">Документы розыгрыша</string>
    <string name="event_min_check">Чек: От %d рублей</string>
    <string name="complain_tile">Пожаловаться</string>
    <string name="complain_choose">Выберите причину жалобы</string>
    <string-array name="complain_causes">
        <item>Неверное описание, фото</item>
        <item>Неверный адрес компании </item>
        <item>Противоречит правилам Checkpot</item>
        <item>Непорядочный владелец</item>
        <item>Мошенник</item>
        <item>Другая причина</item>
    </string-array>
    <string name="complain_message_tile">Пожаловаться</string>
    <string name="complain_message_desc">Опишите нарушение правил</string>
    <string name="complain_message_your">Ваше сообщение</string>
    <string name="complain_message_btn">Принять участие</string>
    <string name="delegate1_title">Привет, это кабинет представителя компании в Чекпоте</string>
    <string name="delegate1_desc">Если вы владелец компании, то можете зарегистрироваться</string>
    <string name="delegate1_btn">Войти</string>
    <string name="delegate2_title">Это кабинет представителя компании в Checkpot</string>
    <string name="delegate2_desc">Нам нужны данные вашей компании для активации профиля. Заполните форму в приложении или отправьте ссылку себе на почту, чтобы заполнить ее с компьютера.</string>
    <string name="delegate2_btn">Ввести данные</string>
    <string name="delegate2_link">Получить ссылку на веб-форму</string>
    <string name="not_activated_title">Ваш аккаунт еще\nне активирован</string>
    <string name="not_activated_description">Данные вашей компании\nнаходятся на проверке</string>
    <string name="support_mail">support@checkpot.fun</string>
    <string name="btn_account">Перейти в кабинет</string>
    <string name="not_activated_again">Отправить еще раз</string>
    <string name="bank_card_title">Банковская карта</string>
    <string name="card_description">Вы можете выполнить оплату картами Visa, Visa Electron, Maestro или Master Card</string>
    <string name="card_number">Номер карты</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="card_validity">Срок действия</string>
    <string name="card_validity_hint">0000</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">000</string>
    <string name="card_owner">Владелец карты</string>
    <string name="card_owner_hint">IVAN IVANOV</string>
    <string name="card_add">Добавить</string>
    <string name="rejection_reason">Опишите причину отказа</string>
    <string name="btn_send">Отправить</string>
    <string name="btn_cancel">Отменить</string>
    <string name="sendReportsSection"># SEND REPORTS SECTION #</string>
    <string name="sendCustomEvent">SEND CUSTOM EVENT</string>
    <string name="sendCustomError">SEND CUSTOM ERROR</string>
    <string name="sendJson">SEND JSON</string>
    <string name="sendAttributes">SEND ATTRIBUTES</string>
    <string name="sendAutoCrash">SIMULATE CRASH</string>
    <string name="sendAutoNativeCrash">SIMULATE NATIVE CRASH</string>
    <string name="confirm_prize">Подтвердить выдачу приза?</string>
</resources>