<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:background="@color/orange"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/sendReportsSection"/>

            <Button
                android:id="@+id/sendCustomEventButton"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/sendCustomEvent"/>

            <Button
                android:id="@+id/sendCustomErrorButton"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/sendCustomError"/>

            <Button
                android:id="@+id/sendJsonButton"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/sendJson"/>

            <Button
                android:id="@+id/sendAttributesButton"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/sendAttributes"/>

            <Button
                android:id="@+id/sendAutoCrashButton"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/sendAutoCrash"/>

            <Button
                android:id="@+id/sendAutoNativeCrashButton"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/sendAutoNativeCrash"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
