<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <EditText
        android:id="@+id/description"
        fontPath="futura_pt_book.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:maxHeight="400dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_frame_blue_8_input"
        android:padding="10dp"
        android:hint="@string/rejection_reason"
        android:gravity="top"
        android:textSize="22dp"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/title_prize_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/confirm_prize"
        android:textSize="24dp"
        android:visibility="visible"
        tools:ignore="MissingPrefix" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_send"
            fontPath="futura_pt_book.ttf"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/bg_btn_blue_22"
            android:text="@string/btn_send"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            tools:ignore="MissingPrefix" />

        <Button
            android:id="@+id/btn_cancel"
            fontPath="futura_pt_book.ttf"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:background="@drawable/bg_btn_blue_22"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            tools:ignore="MissingPrefix" />
    </RelativeLayout>
</LinearLayout>